      '|' alternatives, and '+' and '-' ancestor modifiers.
    
    - New Czech (cs) I18N translation by Jan Grmela.
    
    - mk_inherited_accessors() now also creates a *_no_inherit() method.
    
    - Experimental new roles() form method.
    
    - form methods start(), end() now respect render_method - no longer
      force use of tt templates.
    
    - Tests now always require Test::Aggregate::Nested.
      Re-enable aggregate tests on Win32.
      Don't run all tests twice under both aggregate and t/ (doh!)

0.09010 2012-10-05

    - Internal changes - all Repeatable/nested_name munging is moved out of
      HTML::FormFu::Element::Repeatable into individual constraints

0.09009 2012-09-29
    - Make sure object can('checked') before calling checked() (colinnewell)
    - Updated Repeatable control to update id_field on DBIC::Unique if present
    - ComboBox new get_select_field_nested_name(), get_text_field_nested_name()
      accessors.
    - Fieldset new legend_attributes() method.
    - New form_error_message_class() method.
    - Constraint 'when' callback now receives $constraint as 2nd argument.

0.09007 2012-01-23
    - bump MooseX::Attribute::Chained version

0.09006 2012-01-23
    - fixed deprecation warnings of MX::Attribute::Chained (bricas)
    - Added placeholder attributes for types Text and Textarea with L10N support.
    - Added L10N support for 'prefix' attributes for types Date and DateTime.
    - Added 'attributes' support to types Date and DateTime.

0.09005 2011-09-06
    - bump version of prereq CGI to 3.37 to make all tests pass

0.09004 2011-08-26

    - skip aggregate.t on Win32
    - no functional changes to HTML::FormFu

0.09003_02 2011-08-25

    - disable Test::Aggregate on Win32

0.09003_01 2011-05-11

    - using Test::Aggregate for the test suite if installed
      tests finish now in seconds instead of minutes

0.09003 2011-05-10

    - fixed regression in Model::HashRef introduced in 0.09000

0.09002 2011-03-21
