@@ -43,6 +43,8 @@
     - form methods start(), end() now respect render_method - no longer
       force use of tt templates.
     
+    - Bug fix: del_attribute() on empty attribute no longer sets the attribute.
+    
     - Tests now always require Test::Aggregate::Nested.
       Re-enable aggregate tests on Win32.
       Don't run all tests twice under both aggregate and t/ (doh!)
